<resources>
    <string name="app_name">GeoHunt</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_log_in">Log In</string>
    <string name="text_go_to_login">Already have an account? Log in</string>
    <string name="text_go_to_signup">Don\'t have an account? Sign Up</string>
    <string name="delete_account">Delete Account</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="edit_account">Edit Account</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="new_password_optional">New Password (optional)</string>
    <string name="current_password">Current Password</string>
    <string name="my_places">My Places</string>
    <string name="friends">Friends</string>
    <string name="search_for_friends">Search For Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="enter">Enter</string>
    <string name="stats">Stats</string>
    <string name="go">GO!</string>
    <string name="status">Status</string>
    <string name="my_power_ups">My Power Ups</string>
</resources>